--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,17 @@
     border-radius: 50%;
 }
 
+html[dir="rtl"] {
+  direction: rtl;
+  text-align: right;
+}
+
+html[dir="ltr"] {
+  direction: ltr;
+  text-align: left;
+}
+
+
 @media screen and (width>768px) {
     nav a{
     position: relative;
