--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@
 .txt-colored{
        color: #1b90c6;
 }
+.hero-icon{
+    width: 70px;
+    height: 70px;
+    font-size: 20px;
+}
 
 .cricledIcon{
     width: 48px;
@@ -63,5 +68,13 @@ nav a::after{
 
 nav a:hover::after{
     width: 100%;
+}
+}
+
+@media screen and (width<768px) {
+.hero-icon{    
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
 }
 }
