--- a/src/Component/Hero/Home.module.css
+++ b/src/Component/Hero/Home.module.css
@@ -1,7 +1,7 @@
 .hero-bg {
     min-height: 100dvh;
     background: linear-gradient(          rgba(50, 50, 50, 0.7), 
-    rgba(50, 50, 50, 0.7)),url(../../assets/images/abfc1ea0-56f6-47a8-b323-afbc9719c964/hero-bg.jpg) center/cover no-repeat;
+    rgba(50, 50, 50, 0.7)),url(../../assets/images/abfc1ea0-56f6-47a8-b323-afbc9719c964/hero-bg.jpg) right top/100% 100% no-repeat;
 }
 
 /* .heroColor {
