--- a/src/Pages/About/About.module.css
+++ b/src/Pages/About/About.module.css
@@ -1,3 +1,3 @@
 .aboutBg{
-    background: url(images/aboutBgImg.jpg) no-repeat bottom left/80% 80%;
+    background: url(images/aboutBgImg.jpg) no-repeat center left/80% 70%;
 }
