--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
     border-radius: 15px !important;
 }
 .bg-colored{
-    background:linear-gradient(rgba(27, 144, 198,0.98),rgba(27, 144, 198,0.98)), url(../src/assets/images/abfc1ea0-56f6-47a8-b323-afbc9719c964/bg-4.png) center/cover no-repeat;
+    background:linear-gradient(rgba(27, 144, 198,0.95),rgba(27, 144, 198,0.95)), url(../src/assets/images/abfc1ea0-56f6-47a8-b323-afbc9719c964/bg-4.png) center/cover no-repeat;
 }
 .txt-colored{
        color: #1b90c6;
@@ -48,7 +48,20 @@ html[dir="ltr"] {
   text-align: left;
 }
 
-
+.missionCard .icon-wrapper{
+    transition: all 0.5s linear;
+}
+.missionCard{
+    transition: all 0.3s linear;
+}
+.missionCard:hover{
+    transform: translateY(-15px);
+    color: #1b90c6;
+}
+.missionCard:hover .icon-wrapper{
+background: black !important;
+color:#1b90c6 !important;
+}
 @media screen and (width>768px) {
     nav a{
     position: relative;
